JPA updated to Lombok + H2